--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,31 @@
-* {
+/* * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-}
+} */
 body {
-    font-family: 'Poppins', sans-serif;
+    /* font-family: 'Poppins', sans-serif;
     color: #7093d0;
     width: 100vw;
-    height: auto;
+    height: auto; */
     background: #FFEFBA;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to bottom, #FFFFFF, #FFEFBA);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to bottom, #FFFFFF, #FFEFBA); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     background-repeat: no-repeat;
     background-size: cover;
-    display: flex;
+    /* display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin: 5% 0%;
+    margin: 5% 0%; */
 }
-.card-one {
+/* .card-one {
     width: 80vw;
     height: 60vh;
     background: #ecf0fb;
     border-radius: 10px 10px 0px 0px;
     position: relative;
-}
+} */
 .frame {
     width: 45%;
     position: absolute;
@@ -36,31 +36,31 @@ body {
     width: 100%;
 }
 
-.flag-left {
+/* .flag-left {
     width: 40%;
     position: absolute;
     top: 0%;
     left: 0%;
-}
+} */
 .card-one .info {
     width: 45%;
     margin-top: 25%;
     margin-left: 5%;
 }
-h1 {
+/* h1 {
     font-family:'Oswald', sans-serif;
     font-size: 40px;
     text-align: center;
     margin-right: 3%;
-}
-.fa-cloud-sun {
+} */
+/* .fa-cloud-sun {
     font-size: 80px;
     color: #fece58;
     position: absolute;
     top: 5%;
     right: 5%;
     animation: start 4s infinite;
-}
+} */
 .fa-gift {
     font-size: 60px;
     color: #75c3aa;
@@ -76,7 +76,7 @@ h1 {
     left: 25%;
 }
 
-input {
+/* input {
     width: 180px;
     height: 30px;
     border-radius: 5px;
@@ -86,8 +86,8 @@ input {
 }
 input:focus {
     border: #2193b0 2px solid;
-}
-button {
+} */
+/* button {
     width: 180px;
     height: 30px;
     border-radius: 5px;
@@ -96,11 +96,11 @@ button {
     border: none;
     color: #FFFFFF;
     transition: all 0.5s;
-}
-button:hover {
+} */
+/* button:hover {
     background-color: #2193b0;
     color: #FFFFFF;
-}
+} */
 .card-two {
     width: 80vw;
     height: 60vh;
@@ -111,18 +111,18 @@ button:hover {
     box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.25);
     position: relative;
 }
-.card-two .zenon {
+/* .card-two .zenon {
     width: 50%;
     position: absolute;
     top: 25%;
     left: 25%;
-}
-.flag-right {
+} */
+/* .flag-right {
     width: 40%;
     position: absolute;
     top: 0%;
     right: 0%;
-}
+} */
 .star1 {
     font-size: 25px;
     color: #fece58;
